# Vertretungsplan

./: README.md
backend/: .gitignore  Cargo.toml  build.rs
backend/migrations/: 0001_day.sql  0002_alter_type.sql  0003_plan.sql
backend/src/: db.rs  main.rs
backend/static/frontend/: index.html
backend/static/frontend/assets/: index--HP0Eip8.js  index-0KN8uOqe.css  index-2fStZGtI.css  index-2g897pMl.js  index-3OSS4bg7.css  index-DPyobD5P.js  index-GsVDLyGx.js  index-HHGf7ljF.css  index-IKnu9Mvw.js  index-IoBX0AOQ.css  index-K3qERnBV.css  index-M-TIVkTo.js  index-Ms0u11uR.js  index-NliwZdlp.js  index-QPPsxxMX.js  index-RaUE_Tv2.js  index-X3mIZsde.js  index-XJIywpb8.css  index-_-SmretK.js  index-eDuaEOmB.css  index-imEkio4f.js  index-k4o8zuJr.js  index-kJaUpsYy.js  index-s79xmNcR.js  index-vAlB3saZ.js  index-vSeMPo9f.js  index-wfLhV7vc.js  index-wzIyZEXJ.js  index-yw87o_ji.js  index-z9KBjau4.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  stores.js
frontend/src/lib/: Add_Mask.svelte  Admin.svelte  Admin_Plan.svelte  Admin_Plan_Row.svelte  Admin_Stundenplan.svelte  Admin_Tabelle.svelte  Date_Picker.svelte  Header.svelte  Info.svelte  Login.svelte  Personal.svelte  PersonalRow.svelte  Plan.svelte  SignUp.svelte  Stundenplan.svelte  Stundenplan_Tabelle.svelte  Table.svelte  TableRow.svelte
