[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = {version = "^0.6", features = ["headers"]}
tokio = {version = "1.25.0", features = ["full"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }
tower-http = {version = "0.3.0", features = ["fs", "trace"]}
serde = {version = "1.0.138", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.15.0"
